--- a/notebooks/bonus-unit1/bonus-unit1.ipynb
+++ b/notebooks/bonus-unit1/bonus-unit1.ipynb
@@ -50,11 +50,10 @@
         "id": "x7oR6R-ZIbeS"
       },
       "source": [
-        "### The environment 🎮\n",
+        "### L'environnement 🎮\n",
+        "- Huggy le chien, un environnement créé par [Thomas Simonini](https://twitter.com/ThomasSimonini) based on [Puppo The Corgi](https://blog.unity.com/technology/puppo-the-corgi-cuteness-overload-with-the-unity-ml-agents-toolkit)\n",
         "\n",
-        "- Huggy the Dog, an environment created by [Thomas Simonini](https://twitter.com/ThomasSimonini) based on [Puppo The Corgi](https://blog.unity.com/technology/puppo-the-corgi-cuteness-overload-with-the-unity-ml-agents-toolkit)\n",
-        "\n",
-        "### The library used 📚\n",
+        "### La bibliothèque utilisée 📚\n",
         "\n",
         "- [MLAgents](https://github.com/Unity-Technologies/ml-agents)"
       ]
@@ -65,7 +64,7 @@
         "id": "60yACvZwO0Cy"
       },
       "source": [
-        "We're constantly trying to improve our tutorials, so **if you find some issues in this notebook**, please [open an issue on the Github Repo](https://github.com/huggingface/deep-rl-class/issues)."
+        "Nous essayons constamment d'améliorer nos tutoriels, donc **si vous trouvez des problèmes dans ce notebook**, veuillez [ouvrir un problème sur le dépôt Github](https://github.com/huggingface/deep-rl-class/issues).\n"
       ]
     },
     {
@@ -74,13 +73,12 @@
         "id": "Oks-ETYdO2Dc"
       },
       "source": [
-        "## Objectives of this notebook 🏆\n",
+        "## Objectifs de ce cahier 🏆\n",
         "\n",
-        "At the end of the notebook, you will:\n",
-        "\n",
-        "- Understand **the state space, action space and reward function used to train Huggy**.\n",
-        "- **Train your own Huggy** to fetch the stick.\n",
-        "- Be able to play **with your trained Huggy directly in your browser**.\n",
+        "À la fin de ce cahier, vous serez capable de :\n",
+        "- Comprendre **l’espace d’états, l’espace d’actions et la fonction de récompense utilisés pour entraîner Huggy**.\n",
+        "- **Entraîner votre propre Huggy** à rapporter le bâton.\n",
+        "- Jouer **directement avec votre Huggy entraîné dans votre navigateur**.\n",
         "\n",
         "\n"
       ]
@@ -91,7 +89,7 @@
         "id": "mUlVrqnBv2o1"
       },
       "source": [
-        "## This notebook is from Deep Reinforcement Learning Course\n",
+        "## Ce carnet provient du cours d'apprentissage par renforcement profond.\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/deep-rl-course-illustration.jpg\" alt=\"Deep RL Course illustration\"/>"
       ]
     },
@@ -101,18 +99,16 @@
         "id": "pAMjaQpHwB_s"
       },
       "source": [
-        "In this free course, you will:\n",
+        "Dans ce cours gratuit, vous allez :\n",
+        "- 📖 Étudier l’apprentissage par renforcement profond, tant sur le plan théorique que pratique.\n",
+        "- 🧑‍💻 Apprendre à utiliser des bibliothèques d’apprentissage par renforcement profond reconnues, telles que Stable Baselines3, RL Baselines3 Zoo, CleanRL et Sample Factory 2.0.\n",
+        "- 🤖 Entraîner des agents dans des environnements uniques.\n",
         "\n",
-        "- 📖 Study Deep Reinforcement Learning in **theory and practice**.\n",
-        "- 🧑‍💻 Learn to **use famous Deep RL libraries** such as Stable Baselines3, RL Baselines3 Zoo, CleanRL and Sample Factory 2.0.\n",
-        "- 🤖 Train **agents in unique environments**\n",
-        "\n",
-        "And more check 📚 the syllabus 👉 https://simoninithomas.github.io/deep-rl-course\n",
+        "Pour en savoir plus, consultez le programme. 👉 https://simoninithomas.github.io/deep-rl-course\n",
         "\n",
         "Don’t forget to **<a href=\"http://eepurl.com/ic5ZUD\">sign up to the course</a>** (we are collecting your email to be able to **send you the links when each Unit is published and give you information about the challenges and updates).**\n",
         "\n",
-        "\n",
-        "The best way to keep in touch is to join our discord server to exchange with the community and with us 👉🏻 https://discord.gg/ydHrjt3WP5"
+        "Le meilleur moyen de rester en contact est de rejoindre notre serveur Discord pour échanger avec la communauté et avec nous 👉🏻 https://discord.gg/ydHrjt3WP5"
       ]
     },
     {
@@ -121,13 +117,10 @@
         "id": "6r7Hl0uywFSO"
       },
       "source": [
-        "## Prerequisites 🏗️\n",
-        "\n",
-        "Before diving into the notebook, you need to:\n",
-        "\n",
-        "🔲 📚 **Develop an understanding of the foundations of Reinforcement learning** (MC, TD, Rewards hypothesis...) by doing Unit 1\n",
-        "\n",
-        "🔲 📚 **Read the introduction to Huggy** by doing Bonus Unit 1"
+        "## Prérequis 🏗️\n",
+        "Avant de commencer, vous devez :   \n",
+        "🔲 📚 **Comprendre les fondements de l’apprentissage par renforcement** (module critique, dépendance temporelle, hypothèse des récompenses…) en réalisant l’unité 1.   \n",
+        "🔲 📚 **Lire l’introduction de Huggy** en réalisant l’unité bonus 1.\n"
       ]
     },
     {
@@ -159,9 +152,8 @@
         "id": "an3ByrXYQ4iK"
       },
       "source": [
-        "## Clone the repository 🔽\n",
-        "\n",
-        "- We need to clone the repository, that contains **ML-Agents.**"
+        "## Cloner le dépôt 🔽\n",
+        "- Nous devons cloner le dépôt contenant les **agents ML**.\n"
       ]
     },
     {
@@ -183,20 +175,18 @@
         "id": "kohJPf8u70aK"
       },
       "source": [
-        "## Setup the Virtual Environment 🔽\n",
-        "- In order for the **ML-Agents** to run successfully in Colab,  Colab's Python version must meet the library's Python requirements.\n",
-        "\n",
-        "- We can check for the supported Python version under the `python_requires` parameter in the `setup.py` files. These files are required to set up the **ML-Agents** library for use and can be found in the following locations:\n",
+        "## Configuration de l'environnement virtuel 🔽\n",
+        "- Pour que **ML-Agents** fonctionne correctement dans Colab, la version de Python utilisée par Colab doit respecter les exigences de la bibliothèque.\n",
+        "- Vous pouvez vérifier la version de Python requise grâce au paramètre `python_requires` dans les fichiers `setup.py`. Ces fichiers sont nécessaires à la configuration de la bibliothèque **ML-Agents** et se trouvent aux emplacements suivants :\n",
         "  - `/content/ml-agents/ml-agents/setup.py`\n",
         "  - `/content/ml-agents/ml-agents-envs/setup.py`\n",
-        "\n",
-        "- Colab's Current Python version(can be checked using `!python --version`) doesn't match the library's `python_requires` parameter, as a result installation may silently fail and lead to errors like these, when executing the same commands later:\n",
+        "- La version Python actuelle de Colab (vérifiable avec `!python --version`) ne correspond pas au paramètre `python_requires` de la bibliothèque. Par conséquent, l'installation peut échouer silencieusement et entraîner des erreurs comme celles-ci lors de l'exécution ultérieure des mêmes commandes :\n",
         "  - `/bin/bash: line 1: mlagents-learn: command not found`\n",
         "  - `/bin/bash: line 1: mlagents-push-to-hf: command not found`\n",
         "\n",
-        "- To resolve this, we'll create a virtual environment with a Python version compatible with the **ML-Agents** library.\n",
+        "- Pour résoudre ce problème, nous allons créer un environnement virtuel avec une version de Python compatible avec la bibliothèque **ML-Agents**.\n",
         "\n",
-        "`Note:` *For future compatibility, always check the `python_requires` parameter in the installation files and set your virtual environment to the maximum supported Python version in the given below script if the Colab's Python version is not compatible*"
+        "Remarque : *Pour assurer la compatibilité future, vérifiez toujours le paramètre `python_requires` dans les fichiers d'installation et configurez votre environnement virtuel avec la version maximale de Python prise en charge dans le script ci-dessous si la version de Python de Colab n'est pas compatible.*\n"
       ]
     },
     {
@@ -255,7 +245,7 @@
         "id": "r60nFOdm70aK"
       },
       "source": [
-        "## Installing the dependencies 🔽"
+        "## Installation des dépendances 🔽"
       ]
     },
     {
@@ -697,9 +687,9 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
-    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
