--- a/notebooks/bonus-unit1/bonus-unit1.ipynb
+++ b/notebooks/bonus-unit1/bonus-unit1.ipynb
@@ -269,10 +269,12 @@
         "id": "HRY5ufKUKfhI"
       },
       "source": [
-        "## Download and move the environment zip file in `./trained-envs-executables/linux/`\n",
+        "### Télécharger et déplacer le fichier zip de l'environnement dans\n",
+        "`./trained-envs-executables/linux/`\n",
         "\n",
-        "- Our environment executable is in a zip file.\n",
-        "- We need to download it and place it to `./trained-envs-executables/linux/`"
+        "- Notre fichier exécutable d'environnement se trouve dans une archive zip.\n",
+        "- Il faut le télécharger et le placer dans le répertoire approprié.\n",
+        " `./trained-envs-executables/linux/`"
       ]
     },
     {
@@ -293,7 +295,7 @@
         "id": "IHh_LXsRrrbM"
       },
       "source": [
-        "We downloaded the file Huggy.zip from https://github.com/huggingface/Huggy using `wget`"
+        "Nous avons téléchargé le fichier Huggy.zip depuis https://github.com/huggingface/Huggy en utilisant `wget`\n"
       ]
     },
     {
@@ -325,7 +327,7 @@
         "id": "nyumV5XfPKzu"
       },
       "source": [
-        "Make sure your file is accessible"
+        "Assurez-vous que votre fichier est accessible."
       ]
     },
     {
@@ -345,42 +347,35 @@
         "id": "dYKVj8yUvj55"
       },
       "source": [
-        "## Let's recap how this environment works\n",
+        "## Récapitulons le fonctionnement de cet environnement\n",
+        "### L'espace d'états : ce que Huggy « perçoit ». Huggy ne « voit » pas son environnement. Nous lui fournissons plutôt des informations à son sujet :\n",
+        "- La position de la cible (le bâton)\n",
+        "- Sa position relative par rapport à la cible\n",
+        "- L'orientation de ses jambes.\n",
         "\n",
-        "### The State Space: what Huggy \"perceives.\"\n",
-        "\n",
-        "Huggy doesn't \"see\" his environment. Instead, we provide him information about the environment:\n",
-        "\n",
-        "- The target (stick) position\n",
-        "- The relative position between himself and the target\n",
-        "- The orientation of his legs.\n",
-        "\n",
-        "Given all this information, Huggy **can decide which action to take next to fulfill his goal**.\n",
+        "Grâce à ces informations, Huggy **peut décider de la prochaine action à entreprendre pour atteindre son objectif**.\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/huggy.jpg\" alt=\"Huggy\" width=\"100%\">\n",
         "\n",
-        "\n",
-        "### The Action Space: what moves Huggy can do\n",
+        "### L'espace d'action : les mouvements que Huggy peut faire\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/huggy-action.jpg\" alt=\"Huggy action\" width=\"100%\">\n",
         "\n",
-        "**Joint motors drive huggy legs**. It means that to get the target, Huggy needs to **learn to rotate the joint motors of each of his legs correctly so he can move**.\n",
+        "Les jambes de Huggy sont actionnées par des moteurs articulaires. Cela signifie que pour atteindre la cible, Huggy doit apprendre à faire pivoter correctement les moteurs articulaires de chacune de ses jambes afin de pouvoir se déplacer.\n",
         "\n",
-        "### The Reward Function\n",
+        "### La fonction de récompense\n",
         "\n",
-        "The reward function is designed so that **Huggy will fulfill his goal** : fetch the stick.\n",
+        "La fonction de récompense est conçue pour que **Huggy atteigne son objectif** : rapporter le bâton.\n",
         "\n",
-        "Remember that one of the foundations of Reinforcement Learning is the *reward hypothesis*: a goal can be described as the **maximization of the expected cumulative reward**.\n",
+        "Rappelons que l’un des fondements de l’apprentissage par renforcement est l’*hypothèse de récompense* : un objectif peut être décrit comme la **maximisation de la récompense cumulée attendue**.\n",
         "\n",
-        "Here, our goal is that Huggy **goes towards the stick but without spinning too much**. Hence, our reward function must translate this goal.\n",
-        "\n",
-        "Our reward function:\n",
+        "Ici, notre objectif est que Huggy **se dirige vers le bâton sans trop tourner sur lui-même**. Par conséquent, notre fonction de récompense doit traduire cet objectif. Notre fonction de récompense :\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/reward.jpg\" alt=\"Huggy reward function\" width=\"100%\">\n",
         "\n",
-        "- *Orientation bonus*: we **reward him for getting close to the target**.\n",
-        "- *Time penalty*: a fixed-time penalty given at every action to **force him to get to the stick as fast as possible**.\n",
-        "- *Rotation penalty*: we penalize Huggy if **he spins too much and turns too quickly**.\n",
-        "- *Getting to the target reward*: we reward Huggy for **reaching the target**."
+        "- *Bonus d'orientation* : nous le **récompensons lorsqu'il s'approche de la cible.**\n",
+        "- *Pénalité de temps* : une pénalité de temps fixe est appliquée à chaque action afin de **l'obliger à atteindre le bâton le plus rapidement possible**.\n",
+        "- *Pénalité de rotation* : nous pénalisons Huggy **s'il tourne trop vite sur lui-même.**\n",
+        "- *Récompense pour avoir atteint la cible* : nous récompensons Huggy **lorsqu'il atteint la cible.**"
       ]
     },
     {
@@ -389,24 +384,21 @@
         "id": "NAuEq32Mwvtz"
       },
       "source": [
-        "## Create the Huggy config file\n",
+        "## Créez le fichier de configuration Huggy.\n",
+        "- Dans ML-Agents, vous définissez les **hyperparamètres d'entraînement** dans des fichiers config.yaml.\n",
+        "- Dans le cadre de ce notebook, nous n'allons pas modifier les hyperparamètres. Toutefois, si vous souhaitez faire des essais, vous pouvez modifier d'autres hyperparamètres. Unity fournit une documentation très complète expliquant chacun d'eux [disponible ici](https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Training-Configuration-File.md).\n",
         "\n",
-        "- In ML-Agents, you define the **training hyperparameters into config.yaml files.**\n",
-        "\n",
-        "- For the scope of this notebook, we're not going to modify the hyperparameters, but if you want to try as an experiment, you should also try to modify some other hyperparameters, Unity provides very [good documentation explaining each of them here](https://github.com/Unity-Technologies/ml-agents/blob/main/docs/Training-Configuration-File.md).\n",
-        "\n",
-        "- But we need to create a config file for Huggy.\n",
-        "\n",
-        "  - To do that click on Folder logo on the left of your screen.\n",
+        "- Il nous faut créer un fichier de configuration pour Huggy.\n",
+        "  - Pour ce faire, cliquez sur l'icône du dossier à gauche de votre écran.\n",
         "\n",
         "  <img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/unit1/create_file.png\" alt=\"Create file\" width=\"10%\">\n",
         "\n",
-        "  - Go to `/content/ml-agents/config/ppo`\n",
-        "  - Right mouse click and create a new file called `Huggy.yaml`\n",
+        "  - Allez à `/content/ml-agents/config/ppo`\n",
+        "  - Faites un clic droit et créez un nouveau fichier appelé `Huggy.yaml`\n",
         "\n",
         "  <img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/unit1/create-huggy.png\" alt=\"Create huggy.yaml\" width=\"20%\">\n",
         "\n",
-        "- Copy and paste the content below 🔽"
+        "- Copiez et collez le contenu ci-dessous 🔽"
       ]
     },
     {
