--- a/notebooks/bonus-unit1/bonus-unit1.ipynb
+++ b/notebooks/bonus-unit1/bonus-unit1.ipynb
@@ -443,7 +443,7 @@
         "id": "oakN7UHwXdCX"
       },
       "source": [
-        "- Don't forget to save the file!"
+        "-N'oubliez pas d'enregistrer le fichier !"
       ]
     },
     {
@@ -452,14 +452,15 @@
         "id": "r9wv5NYGw-05"
       },
       "source": [
-        "- **In the case you want to modify the hyperparameters**, in Google Colab notebook, you can click here to open the config.yaml: `/content/ml-agents/config/ppo/Huggy.yaml`\n",
+        "- **Si vous souhaitez modifier les hyperparamètres**, dans Google Colab Notebook, vous pouvez cliquer ici pour ouvrir le fichier config.yaml :\n",
+        " `/content/ml-agents/config/ppo/Huggy.yaml`\n",
         "\n",
-        "- For instance **if you want to save more models during the training** (for now, we save every 200,000 training timesteps). You need to modify:\n",
-        "  - `checkpoint_interval`: The number of training timesteps collected between each checkpoint.\n",
-        "  - `keep_checkpoints`: The maximum number of model checkpoints to keep.\n",
+        "- Par exemple, **si vous souhaitez enregistrer davantage de modèles pendant l'entraînement** (actuellement, nous enregistrons tous les 200 000 pas de temps d'entraînement), vous devez modifier :\n",
+        "  - `checkpoint_interval`: Le nombre d'étapes de temps d'entraînement collectées entre chaque point de contrôle.\n",
         "\n",
-        "=> Just keep in mind that **decreasing the `checkpoint_interval` means more models to upload to the Hub and so a longer uploading time**\n",
-        "We’re now ready to train our agent 🔥."
+        "  - `keep_checkpoints`: Le nombre maximal de points de contrôle du modèle à conserver.\n",
+        "\n",
+        "=> N’oubliez pas que **diminuer la valeur de `checkpoint_interval` signifie plus de modèles à télécharger sur le Hub et donc un temps de téléchargement plus long**. Nous sommes maintenant prêts à entraîner notre agent 🔥.\n"
       ]
     },
     {
@@ -468,23 +469,20 @@
         "id": "f9fI555bO12v"
       },
       "source": [
-        "## Train our agent\n",
-        "\n",
-        "To train our agent, we just need to **launch mlagents-learn and select the executable containing the environment.**\n",
+        "## Entraîner notre agent\n",
+        "Pour entraîner notre agent, il suffit de **lancer mlagents-learn et de sélectionner le fichier exécutable contenant l'environnement.**\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/mllearn.png\" alt=\"ml learn function\" width=\"100%\">\n",
         "\n",
-        "With ML Agents, we run a training script. We define four parameters:\n",
+        "Avec ML Agents, nous exécutons un script d'entraînement. Nous définissons quatre paramètres :\n",
+        "1. `mlagents-learn <config>` : le chemin d'accès au fichier de configuration des hyperparamètres.\n",
+        "2. `--env` : l'emplacement de l'exécutable d'environnement.\n",
+        "3. `--run-id` : le nom à attribuer à l'identifiant d'exécution de l'entraînement.\n",
+        "4. `--no-graphics` : désactiver l'affichage des visualisations pendant l'entraînement.\n",
         "\n",
-        "1. `mlagents-learn <config>`: the path where the hyperparameter config file is.\n",
-        "2. `--env`: where the environment executable is.\n",
-        "3. `--run-id`: the name you want to give to your training run id.\n",
-        "4. `--no-graphics`: to not launch the visualization during the training.\n",
+        "Entraînez le modèle et utilisez l'option `--resume` pour reprendre l'entraînement en cas d'interruption.\n",
         "\n",
-        "Train the model and use the `--resume` flag to continue training in case of interruption.\n",
-        "\n",
-        "> It will fail first time when you use `--resume`, try running the block again to bypass the error.\n",
-        "\n"
+        "> L'entraînement échouera la première fois que vous utiliserez `--resume`. Réessayez d'exécuter le bloc pour contourner l'erreur.\n"
       ]
     },
     {
@@ -493,7 +491,7 @@
         "id": "lN32oWF8zPjs"
       },
       "source": [
-        "The training will take 30 to 45min depending on your machine (don't forget to **set up a GPU**), go take a ☕️you deserve it 🤗."
+        "La formation durera de 30 à 45 minutes en fonction de votre machine (n'oubliez pas de **configurer un GPU**), allez prendre un ☕️, vous le méritez 🤗."
       ]
     },
     {
