--- a/notebooks/bonus-unit1/bonus-unit1.ipynb
+++ b/notebooks/bonus-unit1/bonus-unit1.ipynb
@@ -209,22 +209,27 @@
       },
       "outputs": [],
       "source": [
-        "# Install virtualenv and create a virtual environment\n",
-        "!pip install virtualenv\n",
-        "!virtualenv myenv\n",
-        "\n",
         "# Download and install Miniconda\n",
-        "!wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh\n",
-        "!chmod +x Miniconda3-latest-Linux-x86_64.sh\n",
-        "!./Miniconda3-latest-Linux-x86_64.sh -b -f -p /usr/local\n",
+        "!wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh\n",
+        "!chmod +x miniconda.sh\n",
+        "!./miniconda.sh -b -f -p /usr/local\n",
         "\n",
-        "# Activate Miniconda and install Python ver 3.10.12\n",
-        "!source /usr/local/bin/activate\n",
-        "!conda install -q -y --prefix /usr/local python=3.10.12 ujson  # Specify the version here\n",
+        "# Accept Conda Terms of Service and disable prompts\n",
+        "!/usr/local/bin/conda config --set always_yes yes\n",
+        "!/usr/local/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main\n",
+        "!/usr/local/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r\n",
         "\n",
-        "# Set environment variables for Python and conda paths\n",
-        "!export PYTHONPATH=/usr/local/lib/python3.10/site-packages/\n",
-        "!export CONDA_PREFIX=/usr/local/envs/myenv"
+        "# Create a new conda environment for Python 3.10.12\n",
+        "!/usr/local/bin/conda create -n mlagents_env python=3.10.12 ujson -y\n",
+        "\n",
+        "# Manually update PATH for the current session to include the new conda environment\n",
+        "import os\n",
+        "os.environ['PATH'] = f\"/usr/local/envs/mlagents_env/bin:{os.environ['PATH']}\"\n",
+        "os.environ['CONDA_PREFIX'] = \"/usr/local/envs/mlagents_env\"\n",
+        "os.environ['PYTHONPATH'] = f\"/usr/local/envs/mlagents_env/lib/python3.10/site-packages:{os.environ.get('PYTHONPATH', '')}\"\n",
+        "\n",
+        "# Verify Python version in the new environment (should be 3.10.12)\n",
+        "!python --version\n"
       ]
     },
     {
@@ -256,11 +261,9 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "# Go inside the repository and install the package (can take 3min)\n",
-        "%cd ml-agents\n",
-        "!pip3 install -e ./ml-agents-envs\n",
-        "!pip3 install -e ./ml-agents"
+        "# Install the package using absolute paths (can take 3min)\n",
+        "!/usr/local/bin/conda run -n mlagents_env pip install -e /content/ml-agents/ml-agents-envs\n",
+        "!/usr/local/bin/conda run -n mlagents_env pip install -e /content/ml-agents/ml-agents"
       ]
     },
     {
@@ -502,8 +505,102 @@
       },
       "outputs": [],
       "source": [
-        "!mlagents-learn ./config/ppo/Huggy.yaml --env=./trained-envs-executables/linux/Huggy/Huggy --run-id=\"Huggy2\" --no-graphics"
+        "!/usr/local/bin/conda run -n mlagents_env /usr/local/envs/mlagents_env/bin/mlagents-learn /content/ml-agents/config/ppo/Huggy.yaml --env=./trained-envs-executables/linux/Huggy/Huggy --run-id=\"Huggy2\" --no-graphics"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dbd768f7"
+      },
+      "source": [
+        "!ls -l /usr/local/envs/mlagents_env/bin/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "37f43f7f"
+      },
+      "source": [
+        "!ls -l ./trained-envs-executables/linux/Huggy"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f1c3d8ee"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "# Define the directory path\n",
+        "config_dir = '/content/ml-agents/config/ppo'\n",
+        "config_file_path = os.path.join(config_dir, 'Huggy.yaml')\n",
+        "\n",
+        "# Create the directory if it doesn't exist\n",
+        "os.makedirs(config_dir, exist_ok=True)\n",
+        "\n",
+        "# Define the content for Huggy.yaml\n",
+        "config_content = \"\"\"\n",
+        "behaviors:\n",
+        "  Huggy:\n",
+        "    trainer_type: ppo\n",
+        "    hyperparameters:\n",
+        "      batch_size: 2048\n",
+        "      buffer_size: 20480\n",
+        "      learning_rate: 0.0003\n",
+        "      beta: 0.005\n",
+        "      epsilon: 0.2\n",
+        "      lambd: 0.95\n",
+        "      num_epoch: 3\n",
+        "      learning_rate_schedule: linear\n",
+        "    network_settings:\n",
+        "      normalize: true\n",
+        "      hidden_units: 512\n",
+        "      num_layers: 3\n",
+        "      vis_encode_type: simple\n",
+        "    reward_signals:\n",
+        "      extrinsic:\n",
+        "        gamma: 0.995\n",
+        "        strength: 1.0\n",
+        "    checkpoint_interval: 200000\n",
+        "    keep_checkpoints: 15\n",
+        "    max_steps: 2e6\n",
+        "    time_horizon: 1000\n",
+        "    summary_freq: 50000\n",
+        "\"\"\"\n",
+        "\n",
+        "# Write the content to the Huggy.yaml file\n",
+        "with open(config_file_path, 'w') as f:\n",
+        "    f.write(config_content)\n",
+        "\n",
+        "print(f\"Fichier de configuration Huggy.yaml créé à : {config_file_path}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "001ff7cf"
+      },
+      "source": [
+        "!/usr/local/bin/conda run -n mlagents_env which mlagents-learn"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Vo0egQfjLEjh"
+      }
     },
     {
       "cell_type": "markdown",
@@ -511,9 +608,8 @@
         "id": "5Vue94AzPy1t"
       },
       "source": [
-        "## Push the agent to the 🤗 Hub\n",
-        "\n",
-        "- Now that we trained our agent, we’re **ready to push it to the Hub to be able to play with Huggy on your browser🔥.**"
+        "## Déploiement de l'agent sur le Hub 🤗\n",
+        "- Maintenant que notre agent est entraîné, nous sommes **prêts à le déployer sur le Hub pour que vous puissiez jouer avec Huggy directement dans votre navigateur 🔥.**\n"
       ]
     },
     {
@@ -522,18 +618,32 @@
         "id": "izT6FpgNzZ6R"
       },
       "source": [
-        "To be able to share your model with the community there are three more steps to follow:\n",
+        "Pour pouvoir partager votre modèle avec la communauté, il vous reste trois étapes à suivre :\n",
         "\n",
-        "1️⃣ (If it's not already done) create an account to HF ➡ https://huggingface.co/join\n",
+        "1️⃣ (Si ce n’est pas déjà fait) Créez un compte sur Hugging Face ➡ https://huggingface.co/join\n",
         "\n",
-        "2️⃣ Sign in and then, you need to store your authentication token from the Hugging Face website.\n",
-        "- Create a new token (https://huggingface.co/settings/tokens) **with write role**\n",
+        "2️⃣ Connectez-vous, puis enregistrez votre jeton d’authentification depuis le site web de Hugging Face. - Créez un nouveau jeton (https://huggingface.co/settings/tokens) **avec le rôle d’écriture**\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/create-token.jpg\" alt=\"Create HF Token\">\n",
         "\n",
-        "- Copy the token\n",
-        "- Run the cell below and paste the token"
+        "- Copiez le jeton.\n",
+        "- Exécutez la cellule ci-dessous et collez le jeton.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b131af34"
+      },
+      "source": [
+        "# Load the TensorBoard notebook extension\n",
+        "%load_ext tensorboard\n",
+        "\n",
+        "# Point TensorBoard to the logs directory created by mlagents-learn\n",
+        "%tensorboard --logdir ./results"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -553,7 +663,7 @@
         "id": "ew59mK19zjtN"
       },
       "source": [
-        "If you don't want to use a Google Colab or a Jupyter Notebook, you need to use this command instead: `huggingface-cli login`"
+        "Si vous ne souhaitez pas utiliser Google Colab ou Jupyter Notebook, vous devez utiliser à la place la commande suivante : `huggingface-cli login`"
       ]
     },
     {
@@ -562,10 +672,17 @@
         "id": "Xi0y_VASRzJU"
       },
       "source": [
-        "Then, we simply need to run `mlagents-push-to-hf`.\n",
+        "Ensuite, il nous suffit d'exécuter `mlagents-push-to-hf`.\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/mlpush.png\" alt=\"ml learn function\" width=\"100%\">"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "w0GUG__WMNtC"
+      }
     },
     {
       "cell_type": "markdown",
@@ -573,13 +690,11 @@
         "id": "KK4fPfnczunT"
       },
       "source": [
-        "And we define 4 parameters:\n",
-        "\n",
-        "1. `--run-id`: the name of the training run id.\n",
-        "2. `--local-dir`: where the agent was saved, it’s results/<run_id name>, so in my case results/First Training.\n",
-        "3. `--repo-id`: the name of the Hugging Face repo you want to create or update. It’s always <your huggingface username>/<the repo name>\n",
-        "If the repo does not exist **it will be created automatically**\n",
-        "4. `--commit-message`: since HF repos are git repository you need to define a commit message."
+        "Nous définissons quatre paramètres :\n",
+        "1. `--run-id` : l’identifiant de l’exécution d’entraînement.\n",
+        "2. `--local-dir` : l’emplacement où l’agent a été enregistré. Il s’agit de results/<nom_de_l’exécution>, soit results/First Training dans mon cas.\n",
+        "3. `--repo-id` : le nom du dépôt Hugging Face que vous souhaitez créer ou mettre à jour. Il est toujours composé de <votre nom d’utilisateur Hugging Face>/<nom du dépôt>. Si le dépôt n’existe pas, **il sera créé automatiquement**.\n",
+        "4. `--commit-message` : les dépôts Hugging Face étant des dépôts Git, vous devez définir un message de commit.\n"
       ]
     },
     {
@@ -599,15 +714,14 @@
         "id": "yborB0850FTM"
       },
       "source": [
-        "Else, if everything worked you should have this at the end of the process(but with a different url 😆) :\n",
+        "Sinon, si tout s'est bien passé, vous devriez obtenir ceci à la fin du processus (mais avec une URL différente 😆) :\n",
         "\n",
-        "\n",
-        "\n",
-        "```\n",
-        "Your model is pushed to the hub. You can view your model here: https://huggingface.co/ThomasSimonini/ppo-Huggy\n",
+        "``` Votre modèle a été envoyé au hub. Vous pouvez le consulter ici :\n",
+        " https://huggingface.co/ThomasSimonini/ppo-Huggy\n",
         "```\n",
         "\n",
-        "It’s the link to your model repository. The repository contains a model card that explains how to use the model, your Tensorboard logs and your config file. **What’s awesome is that it’s a git repository, which means you can have different commits, update your repository with a new push, open Pull Requests, etc.**\n",
+        "Il s'agit du lien vers votre dépôt de modèle. Ce dépôt contient une fiche descriptive du modèle expliquant son utilisation, vos journaux TensorBoard et votre fichier de configuration. **L'avantage, c'est qu'il s'agit d'un dépôt Git : vous pouvez donc y ajouter des modifications, le mettre à jour avec un nouveau push, ouvrir des pull requests, etc.**\n",
+        "\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/modelcard.png\" alt=\"ml learn function\" width=\"100%\">"
       ]
@@ -618,7 +732,7 @@
         "id": "5Uaon2cg0NrL"
       },
       "source": [
-        "But now comes the best: **being able to play with Huggy online 👀.**"
+        "Mais voici le meilleur : **pouvoir jouer avec Huggy en ligne 👀.**"
       ]
     },
     {
@@ -627,13 +741,10 @@
         "id": "VMc4oOsE0QiZ"
       },
       "source": [
-        "## Play with your Huggy 🐕\n",
-        "\n",
-        "This step is the simplest:\n",
-        "\n",
-        "- Open the game Huggy in your browser: https://huggingface.co/spaces/ThomasSimonini/Huggy\n",
-        "\n",
-        "- Click on Play with my Huggy model\n",
+        "## Joue avec ton Huggy 🐕\n",
+        "Cette étape est très simple :\n",
+        "- Ouvre le jeu Huggy dans ton navigateur : https://huggingface.co/spaces/ThomasSimonini/Huggy\n",
+        "- Clique sur « Jouer avec mon modèle Huggy »\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/load-huggy.jpg\" alt=\"load-huggy\" width=\"100%\">"
       ]
@@ -644,15 +755,13 @@
         "id": "Djs8c5rR0Z8a"
       },
       "source": [
-        "1. In step 1, type your username (your username is case sensitive: for instance, my username is ThomasSimonini not thomassimonini or ThOmasImoNInI) and click on the search button.\n",
+        "1. À l'étape 1, saisissez votre nom d'utilisateur (attention à la casse : par exemple, mon nom d'utilisateur est ThomasSimonini et non thomassimonini ou ThOmasImoNInI) et cliquez sur le bouton de recherche.\n",
+        "2. À l'étape 2, sélectionnez votre dépôt de modèles.\n",
+        "3. À l'étape 3, **choisissez le modèle que vous souhaitez rejouer** :\n",
+        "- J'en ai plusieurs, car nous avons enregistré un modèle toutes les 500 000 itérations.\n",
+        "- Mais comme je souhaite utiliser le plus récent, je choisis `Huggy.onnx`.\n",
         "\n",
-        "2. In step 2, select your model repository.\n",
-        "\n",
-        "3. In step 3, **choose which model you want to replay**:\n",
-        "  - I have multiple ones, since we saved a model every 500000 timesteps.\n",
-        "  - But since I want the more recent, I choose `Huggy.onnx`\n",
-        "\n",
-        "👉 What’s nice **is to try with different models steps to see the improvement of the agent.**"
+        "👉 L'intérêt est de **tester avec différents modèles pour observer l'amélioration de l'agent**.\n"
       ]
     },
     {
@@ -661,14 +770,77 @@
         "id": "PI6dPWmh064H"
       },
       "source": [
-        "Congrats on finishing this bonus unit!\n",
+        "Félicitations pour avoir terminé cette unité bonus !\n",
         "\n",
-        "You can now sit and enjoy playing with your Huggy 🐶. And don't **forget to spread the love by sharing Huggy with your friends 🤗**. And if you share about it on social media, **please tag us @huggingface and me @simoninithomas**\n",
+        "Tu peux maintenant t'installer confortablement et t'amuser avec ton Huggy 🐶. Et n'oublie pas de partager le plaisir de jouer avec Huggy avec tes amis 🤗.\n",
+        "\n",
+        "Si tu en parles sur les réseaux sociaux, n'oublie pas de nous identifier (@huggingface) et moi (@simoninithomas).\n",
+        "\n",
         "\n",
         "<img src=\"https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/notebooks/unit-bonus1/huggy-cover.jpeg\" alt=\"Huggy cover\" width=\"100%\">\n",
         "\n",
         "\n",
-        "## Keep Learning, Stay  awesome 🤗"
+        "## Continuez d'apprendre, restez géniaux 🤗"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "20164e44"
+      },
+      "source": [
+        "!ls -l ./results"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bf19a48a"
+      },
+      "source": [
+        "!ls -l ./results/Huggy2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "99de7eec"
+      },
+      "source": [
+        "# Task\n",
+        "I will modify cell `bS-Yh1UdHfzy` to use the absolute path `/content/ml-agents/config/ppo/Huggy.yaml` for Huggy.yaml in the mlagents-learn command."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "16534a22"
+      },
+      "source": [
+        "## Modify Training Command\n",
+        "\n",
+        "### Subtask:\n",
+        "Modify cell bS-Yh1UdHfzy to use the absolute path for Huggy.yaml in the mlagents-learn command.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f63c24c7"
+      },
+      "source": [
+        "## Summary:\n",
+        "\n",
+        "### Data Analysis Key Findings\n",
+        "* The `mlagents-learn` command in cell `bS-Yh1UdHfzy` is identified as needing modification.\n",
+        "* The specific change required is to use the absolute path `/content/ml-agents/config/ppo/Huggy.yaml` for the `Huggy.yaml` configuration file within the command.\n",
+        "\n",
+        "### Insights or Next Steps\n",
+        "* The immediate next step is to implement the planned modification in cell `bS-Yh1UdHfzy` to ensure the `mlagents-learn` command correctly references the configuration file.\n"
       ]
     }
   ],
